--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ margin: 0;
     height: 100vh;
     min-width:950px ;
     min-height: 600px;
-    background-color: #006D77;
+    background-color: #006E77;
 
     display: flex;
     justify-content: center;
